# bssh

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2025-12-18-shell-mode-design.md  2025-12-18-shell-mode-implementation.md
src/: app.rs  connection_selector.rs  connections.rs  main.rs  shell.rs  state.rs
src/editor/: mod.rs
src/file_ops/: mod.rs
src/ssh/: client.rs
src/tui/: mod.rs
tests/: editor_integration.rs
