[package]
name = "bssh"
version = "0.2.0"
edition = "2024"
description = "A modern SSH file browser with TUI, featuring vim-style navigation, built-in editor, and saved connections"
license = "MIT"
repository = "https://github.com/ozankasikci/bssh"
keywords = ["ssh", "sftp", "tui", "file-browser", "terminal"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.0"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
termios = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"

[dev-dependencies]
tempfile = "3.10"
